--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "star-db",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage" : "https://jackvolontyr.github.io/star-db-build/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
